[tool.poetry]
name = "pydbbackups"
version = "0.0.3"
description = "DB backups handler"
authors = ["jbuendia1y <jgamer669@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jbuendia1y/pydbbackups"
repository = "https://github.com/jbuendia1y/pydbbackups"
keywords = ["backups", "databases", "handler", "library", "cli"]

[tool.poetry.scripts]
dbbackups = "pydbbackups.cli.main:main"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
rich = "^13.3.3"
pymongo = "^4.3.3"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
